k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopflow-ingress
  namespace: shopflow-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shopflow.local
      http:
        paths:
          - path: /api/auth
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/products
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-service
                port:
                  number: 3002
          - path: /api/orders
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-service
                port:
                  number: 3003
